# rust-backend

./: .env  Cargo.toml  diesel.toml
src/: config-db.rs  main.rs
src/controller/: mod.rs  product_controller.rs  user_controller.rs  voucher_controller.rs
src/db/: config_db.rs
src/model/: category.rs  mod.rs  product.rs  product_bill.rs  schema.rs  user.rs  voucher.rs
src/router/: mod.rs  product.rs  user.rs  voucher.rs
src/service/: mod.rs  product_service.rs  user_service.rs  voucher_service.rs
