[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }